[gd_scene load_steps=8 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Player/Gun.gd" type="Script" id=2]
[ext_resource path="res://Gun/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://Gun/Shooter.gd" type="Script" id=4]
[ext_resource path="res://Gun/Recoil.gd" type="Script" id=5]
[ext_resource path="res://Gun/Detacher.gd" type="Script" id=6]
[ext_resource path="res://Gun/Pickable.tscn" type="PackedScene" id=7]

[node name="Gun" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite2D" type="Sprite" parent="."]
scale = Vector2( 0.358528, 0.151602 )
texture = ExtResource( 1 )

[node name="RadiusDebug" type="Label" parent="."]
visible = false
margin_left = -0.630676
margin_top = -14.0
margin_right = 150.369
margin_bottom = 9.53674e-07
rect_scale = Vector2( 0.5, 0.5 )
text = "Radius: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugLine1" type="Line2D" parent="."]
visible = false
scale = Vector2( 0.358528, 0.151602 )
points = PoolVector2Array( 0, 0, 1000, 0 )
width = 4.0
default_color = Color( 1, 0, 0, 1 )
antialiased = true

[node name="DebugLine2" type="Line2D" parent="."]
visible = false
scale = Vector2( 0.358528, 0.151602 )
points = PoolVector2Array( 0, 0, 1000, 0 )
width = 4.0
default_color = Color( 1, 0, 0, 1 )
antialiased = true

[node name="Shooter" type="Node" parent="."]
script = ExtResource( 4 )
bullet_scene = ExtResource( 3 )

[node name="BulletTimer" type="Timer" parent="Shooter"]
one_shot = true

[node name="Recoil" type="Node" parent="."]
script = ExtResource( 5 )
ACC_RADIUS = 10.0
RECOIL_ENABLED = false

[node name="RecoilTimer" type="Timer" parent="Recoil"]
wait_time = 0.7
one_shot = true

[node name="Detacher" type="Node" parent="."]
script = ExtResource( 6 )
pickable_scene = ExtResource( 7 )
